# ogame

./: .gitignore  CMakeLists.txt  CMakeLists.txt.externals  dummy_io.cpp  main.cpp  server.cpp  server2.cpp
backend/: CMakeLists.txt  CMakeLists.txt.externals  server2.cpp  wasmMain.cpp
backend/configuration/: CMakeLists.txt  LoadConfiguration.cpp  LoadConfiguration.hpp
backend/data/: Building.hpp  BuildingFwd.hpp  CMakeLists.txt  CalculatedProduction.hpp  Conversions.hpp  Duration.hpp  Materials.hpp  PlayerId.hpp  Requirement.hpp  Research.hpp  ResearchQueue.hpp  Researchs.hpp  SingleEntity.hpp  SingleEntityFwd.hpp  Status.hpp  Storage.hpp  Timestamp.hpp  UserCredentials.hpp
backend/data/api/: BuildRequest.hpp  OnPlanetRequest.hpp  RegisterRequest.hpp  RequestVariant.hpp  RequirementListRequest.hpp  RnDRequestVariant.hpp  StartResearchRequrest.hpp  TimeForwardRequest.hpp
backend/database/: CMakeLists.txt
backend/database/database_inmemory/: CMakeLists.txt  StorageDb.cpp  StorageDb.hpp  StorageDbFactory.hpp
backend/database/database_interface/: IPlanetHandle.hpp  IStorageDb.hpp  IStorageDbFactory.hpp  ITransaction.hpp
backend/database/database_sqlite/: BigNumSerializer.hpp  BuildingQueueWrapper.hpp  BuildingSerializer.hpp  BuildingsWrapper.hpp  CMakeLists.txt  CachedProductionWrapper.hpp  ColumnOptions.hpp  MakeTable.hpp  NamedColumn.hpp  PlanetWrapper.hpp  Reflection.hpp  Serialization.hpp  StorageDb.cpp  StorageDb.hpp  StorageDbFactory.hpp  StorageWrapper.hpp  UserCredentialsWrapper.hpp
backend/database/database_sqlite2/: IdAndValue.hpp  PrimaryKeyed.hpp  StorageDb.cpp  StorageDbFactory.hpp
backend/database_interface/: IPlanetHandle.hpp
backend/database_sqlite/: BigNumSerializer.hpp  BuildingQueueWrapper.hpp  BuildingSerializer.hpp  BuildingsWrapper.hpp  CMakeLists.txt  NamedColumn.hpp  PlanetWrapper.hpp  StorageDb.cpp  StorageDb.hpp  StorageWrapper.hpp  TimestampSerializer.hpp  UserCredentialsWrapper.hpp
backend/deployments/: CMakeLists.txt
backend/deployments/deployment_common/: CMakeLists.txt  SimpleLoadBalancer.hpp  SingleInstance.cpp  SingleInstance.hpp  WorkLoadHelperFunctions.hpp
backend/deployments/deployment_wasm/: CMakeLists.txt  WasmAsyncDeployment.cpp  WasmHelper.hpp  WasmSyncDeployment.cpp  rnd_caller_template.py  time_forwarder_template.py
backend/deployments/deployment_zmq_json_singleprocess/: CMakeLists.txt  RnDZmqCommandApp.cpp  RnDZmqCommandReceiver.hpp  SimpleLoadBalancer.hpp  ZmqHelper.hpp  ZmqJson1Process.cpp  ZmqSimpleLoadBalancer.hpp  ZmqTestApp.cpp
backend/deployments/deployment_zmq_json_singlethread/: CMakeLists.txt  RnDZmqTimeForwarderApp.cpp  ZmqJson1Thread.cpp  rnd_caller_template.py  time_forwarder_template.py
backend/json/: Json.hpp  toJson.hpp
backend/knowledge/: CMakeLists.txt  KnowledgeData.cpp  KnowledgeData.hpp
backend/logic/: AccountService.cpp  AccountService.hpp  AccountServiceApp.cpp  AccountServiceApp.hpp  BuildingsData.hpp  CMakeLists.txt  Constants.cpp  Constants.hpp  Error.hpp  ITime.hpp  LogicApp.cpp  LogicApp.hpp  LogicFsm.cpp  LogicFsm.hpp  ProductionCalculator.hpp  RequirementsData.cpp  RequirementsData.hpp  ResearchLogic.cpp  ResearchLogic.hpp  Service.cpp  Service.hpp  SinglePlanetContext.hpp  Time.hpp
backend/logic/handlers/: BuildRequestHandler.cpp  BuildRequestHandler.hpp  BuildingQueueRequestHandler.cpp  BuildingQueueRequestHandler.hpp  BuildingsListRequestHandler.cpp  ProductionInformationRequestHandler.cpp  ProductionInformationRequestHandler.hpp  ProductionPercentagesRequestHandler.cpp  ProductionPercentagesRequestHandler.hpp  StorageRequestHandler.cpp  StorageRequestHandler.hpp
backend/logic/procedures/: EvaluateTimelineProcedure.cpp  EvaluateTimelineProcedure.hpp  ProductionRecalculationProcedure.cpp  ProductionRecalculationProcedure.hpp  ProductionStorageUpdateProcedure.cpp  ProductionStorageUpdateProcedure.hpp
backend/messaging/: CMakeLists.txt  Event.hpp
backend/resource_owner/: CMakeLists.txt  ResourceOwner.cpp  ResourceOwner.hpp  ResourceOwnerApp.cpp  ResourceOwnerApp.hpp  Time.hpp
backend/rnd/: CMakeLists.txt  RnDService.cpp  RnDService.hpp  RnDTime.hpp  RnDZmqTimeForwarderApp.cpp
backend/serialization/: CMakeLists.txt
backend/serialization/serialization_interface/: CMakeLists.txt  (+1 more)
backend/tests/: BigNumTest.cpp
backend/utils/: BigNum.hpp  CMakeLists.txt  Fsm.hpp  GenerateOperators.hpp  GetTypeName.hpp  Logger.cpp  Logger.hpp  NotNull.hpp  Overloaded.hpp  Payload.hpp
common/: CMakeLists.txt  generator.py  moveIfDiffers.sh  tsconfig.json  types.yaml
common/configuration/: .gitignore  CMakeLists.txt  Configuration.json  DemoConfiguration.json  RndConfiguration.json
common/knowledge/: CMakeLists.txt  Knowledge.json
data/: BuildRequest.hpp  Building.hpp  BuildingQueue.hpp  BuildingQueueRequest.hpp  Buildings.hpp  BuildingsListRequest.hpp  CMakeLists.txt  Conversions.hpp  GeneralRequest.hpp  LoginRequest.hpp  Materials.hpp  OnPlanetRequest.hpp  PlanetLocation.hpp  RegisterRequest.hpp  RequestVariant.hpp  Requirement.hpp  Requirements.hpp  Research.hpp  ResearchFwd.hpp  Researchs.hpp  ResponseVariant.hpp  RnDRequestVariant.hpp  Ships.hpp  SingleEntity.hpp  StorageRequest.hpp  TimeForwardRequest.hpp  Timestamp.hpp  UserRequest.hpp
data/api/: BuildRequest.hpp  BuildingsListRequest.hpp  GeneralRequest.hpp  LoginRequest.hpp  RegisterRequest.hpp  ResponseVariant.hpp  StorageRequest.hpp  TimeForwardRequest.hpp
database_interface/: CMakeLists.txt  IPlanetHandle.hpp  IPlayerHandle.hpp  IStorageDb.hpp  ITransactionGuard.hpp
json/: CMakeLists.txt  toJson.hpp
logic/: BuildingsData.hpp  CMakeLists.txt  ProductionCalculator.hpp  RequirementsData.hpp  RnDTime.hpp  Service.cpp  Service.hpp  SinglePlanetContext.hpp
logic/handlers/: BuildingsListRequestHandler.hpp  StorageRequestHandler.cpp
robot_tests/: CMakeLists.txt  OgameLib.py  OgameLib2.py  basic.robot  requirements.txt
robot_tests/test_configuration/: CMakeLists.txt  test_configuration_template.json
serialization/: CMakeLists.txt  JsonDeserialization.hpp
sqlite/: CMakeLists.txt  cmake_install.cmake
(+85 files in other folders)
